@@ -1,3 +1,6 @@
+2006-09-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/util.c (conftoken_getc): Return an int.
+
 2006-09-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/sendbackup-dump.c: Works if rundump is not used.
 
